--- a/src/pages/Login/Login/Login.css
+++ b/src/pages/Login/Login/Login.css
@@ -61,3 +61,20 @@
 .btn-submit:hover {
   background: rgba(206, 92, 92, 0.726);
 }
+
+@media only screen and (max-width: 580px) {
+  /*Big smartphones [426px -> 600px]*/
+  .form-container {
+    width: 95%;
+    height: 650px;
+    padding-left: 20px;
+  }
+  .form-control input {
+    width: 95%;
+    height: 45px;
+    padding-left: 5px;
+  }
+  .btn-submit {
+    width: 95%;
+  }
+}
